--- a/src/main/resources/LabelsBundle_es_ES.properties
+++ b/src/main/resources/LabelsBundle_es_ES.properties
@@ -32,6 +32,8 @@ loading.history.from = Cargando historia desde
 queue.remove.all = Eliminar todos los elementos
 queue.validation = ¿Está seguro que desea eliminar todos los elementos de la lista?
 queue.remove.selected = Eliminar elementos seleccionados
+queue.move.up = Mover arriba
+queue.move.down = Mover abajo
 
 # History
 re-rip.checked = Re-rip Marcados
