--- a/src/main/resources/LabelsBundle_zh_CN.properties
+++ b/src/main/resources/LabelsBundle_zh_CN.properties
@@ -31,6 +31,8 @@ loading.history.from = 加载历史从
 queue.remove.all = 移除全部
 queue.validation = 您确定要移除队列内的全部项目？
 queue.remove.selected = 移除所选项目
+queue.move.up = 上移
+queue.move.down = 下移
 
 # History
 re-rip.checked = 重新抓取选中的项目
