--- a/src/main/resources/LabelsBundle_pt_PT.properties
+++ b/src/main/resources/LabelsBundle_pt_PT.properties
@@ -31,6 +31,9 @@ loading.history.from = Carregar histórico de
 queue.remove.all = Remover todos
 queue.validation = Tem a certeza de que quer remover todos os elementos da fila?
 queue.remove.selected = Remover seleccionados
+queue.move.top = Mover para o topo
+queue.move.up = Mover para cima
+queue.move.down = Mover para baixo
 
 # History
 re-rip.checked = Re-rip seleccionados
