--- a/src/main/resources/LabelsBundle_el_GR.properties
+++ b/src/main/resources/LabelsBundle_el_GR.properties
@@ -31,6 +31,9 @@ loading.history.from = Φόρτωση ιστορικού από
 queue.remove.all = Διαγραφή όλων
 queue.validation = Είσαι σίγουρος οτι θέλεις να διαγράφουν όλα τα στοιχεια της ουράς?
 queue.remove.selected = Διαγραφή επιλεγμένου
+queue.move.top = Μετακίνηση στην κορυφή
+queue.move.up = Μετακίνηση επάνω
+queue.move.down = Μετακίνηση κάτω
 
 # History
 re-rip.checked = Re-rip Τσεκαρισμένο
